# ilpostapi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  backend_swagger.json  entrypoint.sh  example.json  pyproject.toml  renovate.json  skaffold.yaml
.github/: release.yml
.github/workflows/: ci.yml  main.yaml  newpr.yml  on_pr.yml  on_tag.yaml
deploy/helm/: secret.yaml.example  values.yaml
deploy/hooks/: check-secret.sh
deploy/k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  ns.yaml  service.yaml
deploy/k8s/base/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
dev-tools/: check_db.sh
src/: api_client.py  auth.py  auth_dependencies.py  config.py  feeds.py  helpers.py  main.py
src/database/: __init__.py  database.py  favorite_operations.py  models.py  operations.py  user_operations.py
src/routes/: admin.py  api.py  auth.py  profile.py  web.py
src/static/css/: episodes.css  loading.css  player.css  styles.css
src/static/images/: site.webmanifest
src/static/js/: episodes.js  loading-status.js  loading.js  navigation.js  player-sw.js  player.js  rss-popup.js  search.js  theme.js
src/templates/: podcast_directory.html  podcast_episodes.html  profile.html
src/templates/admin/: users.html
src/templates/auth/: base_auth.html  change_password.html  forgot_password.html  login.html  reset_password.html  setup.html
src/utils/: logging.py  rate_limiter.py
tests/: conftest.py  test_admin.py  test_auth_setup.py  test_change_password.py  test_conditional_get.py  test_favorites.py  test_feed_validation.py  test_profile.py  test_protected_routes.py  test_rss_integration.py  test_rss_token_auth.py  test_user_operations.py
