[tool.poetry]
name = "ilpostapi"
version = "0.1.0"
description = "API per accedere ai podcast de Il Post"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.2"
cachetools = "^5.3.1"
aiosqlite = "^0.20.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
alembic = "^1.11.1"
python-json-logger = "^3.0.0"
python-multipart = "^0.0.18"
aiofiles = "^23.2.1"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
