[tool.poetry]
name = "ilpostapi"
version = "0.1.0"
description = "API per accedere ai podcast de Il Post"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.133.0"
uvicorn = "^0.41.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.2"
cachetools = "^7.0.0"
aiosqlite = "^0.22.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
alembic = "^1.11.1"
python-json-logger = "^4.0.0"
python-multipart = "^0.0.22"
aiofiles = "^25.0.0"
httpx = "^0.28.0"
fastapi-mcp = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
