[tool.poetry]
name = "ilpostapi"
version = "0.1.0"
description = "API per accedere ai podcast de Il Post"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.135.0"
uvicorn = "^0.44.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.2"
cachetools = "^7.0.0"
aiosqlite = "^0.22.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
alembic = "^1.11.1"
python-json-logger = "^4.0.0"
python-multipart = "^0.0.26"
aiofiles = "^25.0.0"
httpx = "^0.28.0"
fastapi-mcp = "^0.4.0"
authlib = "^1.6.9"
itsdangerous = "^2.2.0"
aiosmtplib = "^5.1.0"
bcrypt = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "feedparser (>=6.0.12,<7.0.0)"
]
